Delay morphing window when entering print preview mode. b=126675; r=law; sr=alecf; a=asa